--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation group: 'com.formdev', name: 'flatlaf', version: '3.2.2'
     implementation group: 'com.formdev', name: 'svgSalamander', version: '1.1.4'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
 }
 
 java {
